Bug 326029 - No newlines in Contacts notes in right column
Summary: No newlines in Contacts notes in right column
Status: RESOLVED FIXED
Alias: None
Product: kontact
Classification: Applications
Component: contacts (other bugs)
Version First Reported In: 4.11.1
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Tobias Koenig
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-10-15 01:24 UTC by Emmett Culley
Modified: 2013-10-15 06:04 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11.3
Sentry Crash Report:


Attachments
Example to "run together" display (32.23 KB, image/jpeg)
2013-10-15 01:33 UTC, Emmett Culley
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Emmett Culley 2013-10-15 01:24:28 UTC
When select an item in the contacts list the right panel show a summary of the information that is part of that contact.  The problem is that the data that is under Notes: has all new lines removed.  That is all of the data looks like one log sentence.

But if you double click on the contact in the list, and click on the Notes tab in the dialog that pops up, you can see that all newlines are in the data.  That data is exactly what is shown in the summary panel, but without newlines.

Reproducible: Always

Steps to Reproduce:
1.  Open Kontacts
2. Click on Contacts in left panel
3. Click on contact in middle panel (assuming three column view)
4. Note that an text under the Notes: heading has no formatting (newlines)
Actual Results:  
Notes unreadable in summary

Expected Results:  
Notes appear as entered and as displayed in contact dialog.

This only started happening after upgrading to Fedora 19.  I am not sure it was like that right after the upgrade (via fedup), but for sure it was soon after, possible after the first or second system update.  It is my wife's machine so I cannot be exact.
Comment 1 Emmett Culley 2013-10-15 01:33:05 UTC
Created attachment 82855 [details]
Example to "run together" display

THis is a screenshot of of the following text:
---------------------------------
Now is the time for all good men to come to the sid of their country.
Paragraph 2, single spaced.

Paragraph 3, doube spaced.
---------------------------------
As entered and seen in the contact's dialog.
Comment 2 Emmett Culley 2013-10-15 02:39:09 UTC
I just updated to 4.11.2 (4.11.2-1.fc19.x86_64) and it is still doing the same thing.

One note.  My wife says it was OK before that last time I updated her machine.  Unfortunately I don't update her machine  as often as I should, but I am pretty certain that thre was on;y one update between the upgrade to 19  and the update that included 4.11.1.
Comment 3 Laurent Montel 2013-10-15 05:26:09 UTC
Ok will investigate.
Comment 4 Laurent Montel 2013-10-15 06:04:46 UTC
Git commit 6ff7235a76d536f89baa1547715d16ba8b50c83a by Montel Laurent.
Committed on 15/10/2013 at 06:04.
Pushed by mlaurent into branch 'KDE/4.11'.

Fix Bug 326029 - No newlines in Contacts notes in right column

FIXED-IN: 4.11.3

M  +1    -3    kaddressbook/grantleecontactformatter.cpp
M  +1    -1    kaddressbook/viewertemplates/contact_embedded.html

http://commits.kde.org/kdepim/6ff7235a76d536f89baa1547715d16ba8b50c83a