Fix Bug 326029 - No newlines in Contacts notes in right column

FIXED-IN: 4.11.3
BUG: 326029